# RAG_evaluation

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt
