[tool.poetry]
name = "rag evaluation"
version = "0.1.0"
description = "Assessment"
authors = ["Mohamed Luqman <luqmandepy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
